# haskell-snake-game

./: .gitignore  README.md  comp1100-assignment2.cabal
app/: Main.hs
src/: Controller.hs  Model.hs  SnakeTest.hs  Testing.hs  View.hs
test/: Main.hs
