name:                comp1100-assignment2
synopsis:            COMP1100 Assignment 2 - Snake
version:             0.1.0.0
license:             AllRightsReserved
author:              James Bacon & Jack Kelly
maintainer:          james.bacon@anu.edu.au
copyright:           2020 The Australian National University
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Model
                     , View
                     , Controller
                     , SnakeTest
                     , Testing
  build-depends:       base >= 4.8 && < 5
                     , codeworld-api >= 0.5 && < 0.6
                     , text >= 1.2.3.1 && < 1.3
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

executable snake
  main-is:             Main.hs
  build-depends:       base >= 4.8 && < 5
                     , codeworld-api >= 0.5 && < 0.6
                     , text >= 1.2.3.1 && < 1.3
                     , random >= 1.1 && < 1.2 
                     , comp1100-assignment2
  hs-source-dirs:      app
  ghc-options:         -threaded -Wall
  default-language:    Haskell2010

test-suite snake-test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base
                     , comp1100-assignment2
  hs-source-dirs:      test
  ghc-options:         -threaded -Wall
  default-language:    Haskell2010
